--- a/wp-content/uploads/elementor/css/post-76.css
+++ b/wp-content/uploads/elementor/css/post-76.css
@@ -19,7 +19,7 @@
 .elementor-76 .elementor-element.elementor-element-b10cbf9.elementor-column.elementor-element[data-element_type="column"] > .elementor-column-wrap.elementor-element-populated > .elementor-widget-wrap {align-content: center;align-items: center;}
 .elementor-76 .elementor-element.elementor-element-b10cbf9 > .elementor-element-populated {padding: 20px 20px 20px 20px;}
 .elementor-76 .elementor-element.elementor-element-e479d2f {font-size: 1.2em;}
-.elementor-76 .elementor-element.elementor-element-5e04df4 {color: #000;}
+.elementor-76 .elementor-element.elementor-element-75e5ebd .elementor-button {font-size: 29px;}
 .elementor-76 .elementor-element.elementor-element-834445e {padding: 80px 20px 80px 20px;}
 .elementor-76 .elementor-element.elementor-element-b6760f2 > .elementor-element-populated {padding: 20px 20px 20px 20px;}
 .elementor-76 .elementor-element.elementor-element-85a8e33.elementor-view-stacked .elementor-icon {background-color: #fcaf3b;}
